# indifferentiable-hashing

./: .gitignore  Cargo.toml  LICENSE  README.md  makefile
benches/: bench.rs
scripts/: 377.sage  381.sage  makefile  test_vectors.sage
src/: bls12_377.rs  bls12_381.rs  lib.rs  test_vectors.rs
