[package]
name = "indifferentiable-hashing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = { version = "^0.3.0", default-features = false }
ark-ec = { version = "^0.3.0", default-features = false }
ark-std = { version = "^0.3.0", default-features = false }
ark-bls12-381 = { version = "^0.3.0", default-features = false, features = [ "curve" ] }
ark-bls12-377 = { version = "^0.3.0", default-features = false, features = [ "curve" ] }
ark-serialize = { version = "^0.3.0", default-features = false }

sha2 = { version = "^0.10.0", default-features = false }

criterion = "0.3.4"

[dev-dependencies]
itoa = "1.0.2"
ark-ec-m2c = { package = "ark-ec", git = "https://github.com/arkworks-rs/algebra/", features = [ "parallel" ], rev = "a010399ffef0fbcdefeea8e7793a2f61f769fa3a" }
ark-ff-m2c = { package = "ark-ff", git = "https://github.com/arkworks-rs/algebra/", features = [ "parallel" ], rev = "a010399ffef0fbcdefeea8e7793a2f61f769fa3a"  }
ark-test-curves = { git = "https://github.com/arkworks-rs/algebra/", features = [ "parallel", "bls12_381_curve" ], rev = "a010399ffef0fbcdefeea8e7793a2f61f769fa3a"  }

[[bench]]
name = "bench"
harness = false

# To be removed in the new release.
[patch.crates-io]
ark-std = { git = "https://github.com/arkworks-rs/std"}