[package]
name = "indifferentiable-hashing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = { version = "0.4.0", default-features = false }
ark-ec = { version = "0.4.0", default-features = false }
ark-std = { version = "0.4.0", default-features = false }
ark-bls12-381 = { git = "https://github.com/arkworks-rs/curves", rev = "3668338023a5e07efbf46f8816f63cb00bb54b3a", default-features = false, features = [ "curve" ] }
ark-bls12-377 = { git = "https://github.com/arkworks-rs/curves", rev = "3668338023a5e07efbf46f8816f63cb00bb54b3a", default-features = false, features = [ "curve" ]  }
ark-serialize = { version = "0.4.0", default-features = false }

sha2 = { version = "^0.10.0", default-features = false }

criterion = "0.3.4"

[dev-dependencies]
itoa = "1.0.2"
ark-test-curves = { version = "0.4.0", default-features = false }

[[bench]]
name = "bench"
harness = false
